src/iodbc_sql.h

#define SQL_HANDLE_ENV              1
#define SQL_HANDLE_DBC              2
#define SQL_HANDLE_STMT             3
#define SQL_HANDLE_DESC             4
/*
 *  Flags for null-terminated strings
 */
#define SQL_NTS                 (-3)
#define SQL_NULL_HANDLE             0L
#define SQL_FALSE               0
#define SQL_TRUE                1
/*
 *  SQLFreeStmt
 */
#define SQL_CLOSE               0
#define SQL_UNBIND              2
#define SQL_RESET_PARAMS            3
#define SQL_ATTR_AUTO_IPD           10001
#define SQL_ATTR_METADATA_ID            10014
#define SQL_ATTR_OUTPUT_NTS         10001
SQLRETURN SQL_API SQLAllocHandle (
    SQLSMALLINT       HandleType,
    SQLHANDLE         InputHandle,
    SQLHANDLE       * OutputHandle);
SQLRETURN SQL_API SQLConnect (
    SQLHDBC       ConnectionHandle,
    SQLCHAR     * ServerName,
    SQLSMALLINT       NameLength1,
    SQLCHAR     * UserName,
    SQLSMALLINT       NameLength2,
    SQLCHAR     * Authentication,
    SQLSMALLINT       NameLength3);
SQLRETURN SQL_API SQLCopyDesc (
    SQLHDESC          SourceDescHandle,
    SQLHDESC          TargetDescHandle);
SQLRETURN SQL_API SQLDisconnect (
    SQLHDBC       ConnectionHandle);
SQLRETURN SQL_API SQLFreeHandle (
    SQLSMALLINT       HandleType,
    SQLHANDLE         Handle);
SQLRETURN SQL_API SQLFreeStmt (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      Option);
SQLRETURN SQL_API SQLGetConnectAttr (
    SQLHDBC       ConnectionHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        BufferLength,
    SQLINTEGER      * StringLength);
SQLRETURN SQL_API SQLGetDescField (
    SQLHDESC          DescriptorHandle,
    SQLSMALLINT       RecNumber,
    SQLSMALLINT       FieldIdentifier,
    SQLPOINTER        Value,
    SQLINTEGER        BufferLength,
    SQLINTEGER      * StringLength);
SQLRETURN SQL_API SQLGetDescRec (
    SQLHDESC          DescriptorHandle,
    SQLSMALLINT       RecNumber,
    SQLCHAR     * Name,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * StringLength,
    SQLSMALLINT     * Type,
    SQLSMALLINT     * SubType,
    SQLLEN      * Length,
    SQLSMALLINT     * Precision,
    SQLSMALLINT     * Scale,
    SQLSMALLINT     * Nullable);
SQLRETURN SQL_API SQLGetEnvAttr (
    SQLHENV       EnvironmentHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        BufferLength,
    SQLINTEGER      * StringLength);
SQLRETURN SQL_API SQLGetFunctions (
    SQLHDBC     ConnectionHandle,
    SQLUSMALLINT    FunctionId,
    SQLUSMALLINT *  Supported);
SQLRETURN SQL_API SQLGetStmtAttr (
    SQLHSTMT          StatementHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        BufferLength,
    SQLINTEGER      * StringLength);
SQLRETURN SQL_API SQLSetConnectAttr (
    SQLHDBC       ConnectionHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        StringLength);
SQLRETURN SQL_API SQLSetDescField (
    SQLHDESC          DescriptorHandle,
    SQLSMALLINT       RecNumber,
    SQLSMALLINT       FieldIdentifier,
    SQLPOINTER        Value,
    SQLINTEGER        BufferLength);
SQLRETURN SQL_API SQLSetEnvAttr (
    SQLHENV       EnvironmentHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        StringLength);
SQLRETURN SQL_API SQLSetStmtAttr (
    SQLHSTMT          StatementHandle,
    SQLINTEGER        Attribute,
    SQLPOINTER        Value,
    SQLINTEGER        StringLength);