src/iodbc_sqlext.h

#define SQL_IS_POINTER              (-4)
#define SQL_IS_UINTEGER             (-5)
#define SQL_IS_INTEGER              (-6)
/*
 *  SQLDriverConnect
 */
#define SQL_DRIVER_NOPROMPT         0
#define SQL_DRIVER_COMPLETE         1
#define SQL_DRIVER_PROMPT           2
#define SQL_DRIVER_COMPLETE_REQUIRED        3
#define SQL_ATTR_ACCESS_MODE            SQL_ACCESS_MODE
#define SQL_ATTR_AUTOCOMMIT         SQL_AUTOCOMMIT
#define SQL_ATTR_CONNECTION_TIMEOUT     113
#define SQL_ATTR_CURRENT_CATALOG        SQL_CURRENT_QUALIFIER
#define SQL_ATTR_ENLIST_IN_DTC          1207
#define SQL_ATTR_LOGIN_TIMEOUT          SQL_LOGIN_TIMEOUT
#define SQL_ATTR_ODBC_CURSORS           SQL_ODBC_CURSORS
#define SQL_ATTR_PACKET_SIZE            SQL_PACKET_SIZE
#define SQL_ATTR_QUIET_MODE         SQL_QUIET_MODE
#define SQL_ATTR_TRACE              SQL_OPT_TRACE
#define SQL_ATTR_TRACEFILE          SQL_OPT_TRACEFILE
#define SQL_ATTR_TRANSLATE_LIB          SQL_TRANSLATE_DLL
#define SQL_ATTR_TRANSLATE_OPTION       SQL_TRANSLATE_OPTION
#define SQL_ATTR_TXN_ISOLATION          SQL_TXN_ISOLATION
#define SQL_ATTR_CONNECTION_DEAD        1209 /* GetConnectAttr only */
/*
 *  SQLGetConnectAttr - SQL_ACCESS_MODE
 */
#define SQL_MODE_READ_WRITE         0UL
#define SQL_MODE_READ_ONLY          1UL
/*
 *  SQLGetConnectAttr - SQL_AUTOCOMMIT
 */
#define SQL_AUTOCOMMIT_OFF          0UL
#define SQL_AUTOCOMMIT_ON           1UL
/*
 *  SQLGetConnectAttr - SQL_ODBC_CURSORS
 */
#define SQL_CUR_USE_IF_NEEDED           0UL
#define SQL_CUR_USE_ODBC            1UL
#define SQL_CUR_USE_DRIVER          2UL
/*
 *  SQLGetConnectAttr - SQL_OPT_TRACE
 */
#define SQL_OPT_TRACE_OFF           0UL
#define SQL_OPT_TRACE_ON            1UL
/*
 *  SQLGetConnectAttr - SQL_ATTR_CONNECTION_DEAD
 */
#define SQL_CD_TRUE             1L /* closed/dead */
#define SQL_CD_FALSE                0L /* open/available */
#define SQL_DTC_DONE                0L
/*
 *  SQLGetEnvAttr - Attributes
 */
#define SQL_ATTR_ODBC_VERSION           200
#define SQL_ATTR_CONNECTION_POOLING     201
#define SQL_ATTR_CP_MATCH           202
/*
 * SQLGetEnvAttr - SQL_ATTR_ODBC_VERSION
 */
#define SQL_OV_ODBC2                2UL
#define SQL_OV_ODBC3                3UL
/*
 *  SQLGetEnvAttr - SQL_ATTR_CONNECTION_POOLING
 */
#define SQL_CP_OFF              0UL
#define SQL_CP_ONE_PER_DRIVER           1UL
#define SQL_CP_ONE_PER_HENV         2UL
#define SQL_CP_DEFAULT              SQL_CP_OFF
/*
 * SQLGetEnvAttr - SQL_ATTR_CP_MATCH
 */
#define SQL_CP_STRICT_MATCH         0UL
#define SQL_CP_RELAXED_MATCH            1UL
#define SQL_ATTR_ASYNC_ENABLE           4
#define SQL_ATTR_ROW_ARRAY_SIZE         27
/*
 *  SQLGetStmtAttr - SQL_ATTR_ASYNC_ENABLE
 */
#define SQL_ASYNC_ENABLE_OFF            0UL
#define SQL_ASYNC_ENABLE_ON         1UL
/*
 *  Level 1 function prototypes
 */
SQLRETURN SQL_API SQLDriverConnect (
    SQLHDBC       hdbc,
    SQLHWND       hwnd,
    SQLCHAR     * szConnStrIn,
    SQLSMALLINT       cbConnStrIn,
    SQLCHAR     * szConnStrOut,
    SQLSMALLINT       cbConnStrOutMax,
    SQLSMALLINT     * pcbConnStrOut,
    SQLUSMALLINT      fDriverCompletion);
/*
 *  Level 2 function prototypes
 */

SQLRETURN SQL_API SQLBrowseConnect (
    SQLHDBC       hdbc,
    SQLCHAR     * szConnStrIn,
    SQLSMALLINT       cbConnStrIn,
    SQLCHAR     * szConnStrOut,
    SQLSMALLINT       cbConnStrOutMax,
    SQLSMALLINT     * pcbConnStrOut);