src/ODBC_API.jl


###################################################		Handle Functions	####################################################################################################
#SQLAllocHandle
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms712455(v=vs.85).aspx
 #Description: allocates an environment, connection, statement, or descriptor handle
 #Valid handle types
 const SQL_HANDLE_ENV = int16(1)  
 const SQL_HANDLE_DBC = int16(2) 
 const SQL_HANDLE_STMT = int16(3)
 const SQL_HANDLE_DESC = int16(4)
 const SQL_NULL_HANDLE = 0
 #Status: Tested on Windows, Linux, Mac 32/64-bit
function SQLAllocHandle(handletype::Int16, parenthandle::Union(Int,Ptr{Void}), handle::Array{Ptr{Void},1})
	return ccall( (:SQLAllocHandle, odbc_dm), stdcall, 
		Int16, (Int16,Int,Ptr{Void}),
		handletype,parenthandle,handle)
end
#SQLFreeHandle
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms710123(v=vs.85).aspx
 #Description: frees resources associated with a specific environment, connection, statement, or descriptor handle
 #See SQLAllocHandle for valid handle types
 #Status: Tested on Windows, Linux, Mac 32/64-bit
function SQLFreeHandle(handletype::Int16,handle::Ptr{Void}) 
	return ccall( (:SQLFreeHandle, odbc_dm), stdcall,  
		Int16, (Int16,Ptr{Void}), 
		handletype,handle)		
end
#SQLSetEnvAttr
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms709285(v=vs.85).aspx
 #Description: sets attributes that govern aspects of environments
 #Valid attributes; valid values for attribute are indented
 const SQL_ATTR_CONNECTION_POOLING = 201
	const SQL_CP_OFF = uint(0)
	const SQL_CP_ONE_PER_DRIVER = uint(1)
	const SQL_CP_ONE_PER_HENV = uint(2)
	#const SQL_CP_DRIVER_AWARE = 
	const SQL_CP_DEFAULT = SQL_CP_OFF
 const SQL_ATTR_CP_MATCH = 202
	const SQL_CP_RELAXED_MATCH = uint(1)
	const SQL_CP_STRICT_MATCH = uint(0)
 const SQL_ATTR_ODBC_VERSION = 200
	const SQL_OV_ODBC2 = 2
	const SQL_OV_ODBC3 = 3 
	#const SQL_OV_ODBC3_80 = 
 const SQL_ATTR_OUTPUT_NTS = 10001
	const SQL_TRUE = 1
	const SQL_FALSE = 0
 #Status: Tested on Windows, Linux, Mac 32/64-bit
function SQLSetEnvAttr{T<:Union(Int,Uint)}(env_handle::Ptr{Void},attribute::Int,value::T)
	return ccall( (:SQLSetEnvAttr, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Int,T,Int), 
		env_handle,attribute,value,0)
end
#SQLGetEnvAttr
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms709276(v=vs.85).aspx
 #Description: returns the current setting of an environment attribute
 #Valid attributes: See SQLSetEnvAttr
 #Status: 
function SQLGetEnvAttr(env::Ptr{Void},attribute::Int,value::Array{Int,1},bytes_returned::Array{Int,1})
	return ccall( (:SQLGetEnvAttr, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int,Ptr{Int},Int,Ptr{Int}),
		env,attribute,value,0,bytes_returned)
end
#SQLSetConnectAttr
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms713605(v=vs.85).aspx
 #Description: sets attributes that govern aspects of connections.
 #Valid attributes
	const SQL_ATTR_ACCESS_MODE = 101
		const SQL_MODE_READ_ONLY = uint(1)
		const SQL_MODE_READ_WRITE = uint(0)
	#const SQL_ATTR_ASYNC_DBC_EVENT 
		#pointer
	#const SQL_ATTR_ASYNC_DBC_FUNCTIONS_ENABLE 
		#const SQL_ASYNC_DBC_ENABLE_ON = uint()
		#const SQL_ASYNC_DBC_ENABLE_OFF = uint()
	#const SQL_ATTR_ASYNC_DBC_PCALLBACK 
		#pointer
	#const SQL_ATTR_ASYNC_DBC_PCONTEXT 
		#pointer
	const SQL_ATTR_ASYNC_ENABLE = 4
		const SQL_ASYNC_ENABLE_OFF = uint(0)
		const SQL_ASYNC_ENABLE_ON = uint(1)
	const SQL_ATTR_AUTOCOMMIT = 102
		const SQL_AUTOCOMMIT_OFF = uint(0)
		const SQL_AUTOCOMMIT_ON = uint(1)
	const SQL_ATTR_CONNECTION_TIMEOUT = 113
		#uint of how long you want the connection timeout
	const SQL_ATTR_CURRENT_CATALOG = 109
		#string/Ptr{Uint8} of default database to use
	#const SQL_ATTR_DBC_INFO_TOKEN 
		#pointer
	const SQL_ATTR_ENLIST_IN_DTC = 1207
		#pointer: Pass a DTC OLE transaction object that specifies the transaction to export to SQL Server, or SQL_DTC_DONE to end the connection's DTC association.
	const SQL_ATTR_LOGIN_TIMEOUT = 103
		#uint of how long you want the login timeout
	const SQL_ATTR_METADATA_ID = 10014
		#SQL_TRUE, SQL_FALSE
	const SQL_ATTR_ODBC_CURSORS = 110
		const SQL_CUR_USE_IF_NEEDED = uint(0)
		const SQL_CUR_USE_ODBC = uint(1)
		const SQL_CUR_USE_DRIVER = uint(2)
	const SQL_ATTR_PACKET_SIZE = 112
		#uint for network packet size
	const SQL_ATTR_QUIET_MODE = 111
		#window handle pointer
	const SQL_ATTR_TRACE = 104
		const SQL_OPT_TRACE_OFF = uint(0)
		const SQL_OPT_TRACE_ON = uint(1)
	const SQL_ATTR_TRACEFILE = 105
		#A null-terminated character string containing the name of the trace file.
	const SQL_ATTR_TRANSLATE_LIB = 106
		#A null-terminated character string containing the name of a library containing the functions SQLDriverToDataSource and SQLDataSourceToDriver that the driver accesses to perform tasks such as character set translation.
	const SQL_ATTR_TRANSLATE_OPTION = 107
		#A 32-bit flag value that is passed to the translation DLL. 
	const SQL_ATTR_TXN_ISOLATION = 108
		#A 32-bit bitmask that sets the transaction isolation level for the current connection.
	#Valid value_length
	const SQL_IS_POINTER = -4
	const SQL_IS_INTEGER = -6
	const SQL_IS_UINTEGER = -5
	const SQL_NTS = -3
	#length of string or binary stream
 #Status:
function SQLSetConnectAttr(dbc::Ptr{Void},attribute::Int,value::Union(String,Uint),value_length::Int)
	return ccall( (:SQLSetConnectAttr, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int,typeof(value)==String?Ptr{Uint8}:Ptr{Uint},Int),
		dbc,attribute,value,value_length)
end
#SQLGetConnectAttr
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms710297(v=vs.85).aspx
 #Description: returns the current setting of a connection attribute.
 #Valid attributes: see SQLSetConnectAttr in addition to those below
	const SQL_ATTR_AUTO_IPD = 10001
		#SQL_TRUE, SQL_FALSE
	const SQL_ATTR_CONNECTION_DEAD = 1209
		const SQL_CD_TRUE = 1
		const SQL_CD_FALSE = 0
 #Status:
function SQLGetConnectAttr{T,N}(dbc::Ptr{Void},attribute::Int,value::Array{T,N},bytes_returned::Array{Int,1})
	return ccall( (:SQLGetConnectAttr, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int,Ptr{T},Int,Ptr{Int}),
		dbc,attribute,value,sizeof(T)*N,bytes_returned)
end
#SQLSetStmtAttr
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms712631(v=vs.85).aspx
 #Description: sets attributes related to a statement.
 #Valid attributes
	const SQL_ATTR_ROW_ARRAY_SIZE = 27
		#this sets the rowset size for ExtendedFetch and FetchScroll
 #Valid value_length: See SQLSetConnectAttr; SQL_IS_POINTER, SQL_IS_INTEGER, SQL_IS_UINTEGER, SQL_NTS
 #Status:
function SQLSetStmtAttr{T<:Union(Ptr{Void},Uint)}(stmt::Ptr{Void},attribute::Int,value::T,value_length::Int)
	return ccall( (:SQLSetStmtAttr, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int,T,Int),
		stmt,attribute,value,value_length)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms715438(v=vs.85).aspx
function SQLGetStmtAttr{T,N}(stmt::Ptr{Void},attribute::Int,value::Array{T,N},bytes_returned::Array{Int,1})
	return ccall( (:SQLGetStmtAttr, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int,Ptr{T},Int,Ptr{Int}),
		stmt,attribute,value,sizeof(T)*N,bytes_returned)
end
#SQLFreeStmt
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms709284(v=vs.85).aspx
 #Description: stops processing associated with a specific statement, closes any open cursors associated with the statement, discards pending results, or, optionally, frees all resources associated with the statement handle.
 #Valid param
	const SQL_CLOSE = uint16(0)
	const SQL_RESET_PARAMS = uint16(3)
	const SQL_UNBIND = uint16(2)
 #Status:
function SQLFreeStmt(stmt::Ptr{Void},param::Uint16)
	return ccall( (:SQLFreeStmt, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Uint16), 
		stmt, param)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms713560(v=vs.85).aspx
function SQLSetDescField{T,N}(desc::Ptr{Void},i::Int16,field_id::Int16,value::Array{T,N},value_length::Array{Int,1})
	return ccall( (:SQLSetDescField, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int16,Int16,Ptr{T},Int),
		desc,field_id,value,value_length)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms716370(v=vs.85).aspx
function SQLGetDescField{T,N}(desc::Ptr{Void},i::Int16,attribute::Int16,value::Array{T,N},bytes_returned::Array{Int,1})
	return ccall( (:SQLGetDescField, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int16,Int16,Ptr{T},Int,Ptr{Int}),
		desc,attribute,value,sizeof(T)*N,bytes_returned)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms710921(v=vs.85).aspx
function SQLGetDescRec(desc::Ptr{Void},i::Int16,name::Array{Uint8,1},name_length::Array{Int16,1},type_ptr::Array{Int16,1},subtype_ptr::Array{Int16,1},length_ptr::Array{Int,1},precision_ptr::Array{Int16,1},scale_ptr::Array{Int16,1},nullable_ptr::Array{Int16,1},)
	return ccall( (:SQLGetDescRec, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int16,Ptr{Uint8},Int16,Ptr{Int16},Ptr{Int16},Ptr{Int16},Ptr{Int},Ptr{Int16},Ptr{Int16},Ptr{Int16}),
		desc,i,name,length(name),name_length,type_ptr,subtype_ptr,length_ptr,precision_ptr,scale_ptr,nullable_ptr)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms715378(v=vs.85).aspx
function SQLCopyDesc(source_desc::Ptr{Void},dest_desc::Ptr{Void})
	return ccall( (:SQLCopyDesc, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Void}),
		source_desc,dest_desc)
end

###################################################		Connection Functions	####################################################################################################
#SQLConnect
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms711810(v=vs.85).aspx
 #Description: establishes connections to a driver and a data source
 #Status:
function SQLConnect(dbc::Ptr{Void},dsn::String,username::String,password::String)
	return ccall( (:SQLConnect, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Uint8},Int16),
		dbc,dsn,length(dsn),username,length(username),password,length(password))
end
#SQLDriverConnect
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms715433(v=vs.85).aspx
 #Description:
 #Valid driver_prompt
	const SQL_DRIVER_COMPLETE = uint16(1)
	const SQL_DRIVER_COMPLETE_REQUIRED = uint16(3)
	const SQL_DRIVER_NOPROMPT = uint16(0)
	const SQL_DRIVER_PROMPT = uint16(2)
 #Status:
function SQLDriverConnect(dbc::Ptr{Void},window_handle::Ptr{Void},conn_string::String,out_conn::Array{Uint8,1},out_buff::Array{Int16,1},driver_prompt::Uint16)
	return ccall( (:SQLDriverConnect, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Int16},Uint16),
		dbc,window_handle,conn_string,length(conn_string),out_conn,length(out_conn),out_buff,driver_prompt)
end
#SQLBrowseConnect
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms714565(v=vs.85).aspx
 #Description: supports an iterative method of discovering and enumerating the attributes and attribute values required to connect to a data source
 #Status:
function SQLBrowseConnect(dbc::Ptr{Void},instring::String,outstring::Array{Uint8,1},indicator::Array{Int16,1})
	return ccall( (:SQLBrowseConnect, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Uint8},Int16,Ptr{Int16}),
		dbc,instring,length(instring),outstring,length(outstring),indicator)
end
#SQLDisconnect
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms713946(v=vs.85).aspx
 #Description: closes the connection associated with a specific connection handle
 #Status:
function SQLDisconnect(dbc::Ptr{Void})
	return ccall( (:SQLDisconnect, odbc_dm), stdcall,
		Int16, (Ptr{Void},), 
		dbc)
end
#SQLGetFunctions
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms709291(v=vs.85).aspx
 #Descriptions:
 #Valid functionid
